--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -4,7 +4,7 @@ url=https://www.demoblaze.com/index.html
 username = amitghute
 password = 8856003438
 
-highlight = true
+highlight = false
 headless= false
 incognito = false
 
